kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testing101
  labels:
    app: testing101
  annotations:
    argocd-image-updater.argoproj.io/image-list: testing101=ghcr.io/mb-wali/coming-soon
    argocd-image-updater.argoproj.io/write-back-method: git
    argocd-image-updater.argoproj.io/update-strategy: main
spec:
  replicas: 1
  selector:
    matchLabels:
      app: testing101
  template:
    metadata:
      labels:
        app: testing101
    spec:
      containers:
        - name: testing101
          image: ghcr.io/mb-wali/coming-soon:main
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: testing101-service
spec:
  selector:
    app: testing101
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: comingsoon-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/auth-url: "https://auth.k3s.cyverse.at/oauth2/auth"
    # nginx.ingress.kubernetes.io/auth-signin: "https://auth.k3s.cyverse.at/oauth2/start?rd=https://$host$request_uri"
    # nginx.ingress.kubernetes.io/auth-response-headers: "X-Auth-Request-Email,X-Auth-Request-User"
spec:
  ingressClassName: nginx  # Add this line to specify the Ingress class
  rules:
  - host: comingsoon.k3s.cyverse.at  # This only routes traffic for comingsoon.lb.cyverse.at
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: testing101-service
            port:
              number: 8080
